viewPager and tabLayout appear, more work on listeners and hooking in Eric's Article object in the recyclerViewAdapter. Added Picasso for images in the RecyclerViewHolder